force-app/main/default/objects/Invoice__c/fields/Admin_Fees__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fees__c</fullName>
    <label>Admin Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>