force-app/main/default/objects/Invoice__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Center)</relationshipLabel>
    <relationshipName>Center_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>