force-app/main/default/objects/Invoice__c/fields/Centre_Location__c.field-meta.xml
<CustomField>
    <fullName>Centre_Location__c</fullName>
    <formula>TEXT(Center__r.Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Location</label>
    <type>Text</type>
</CustomField>