force-app/main/default/objects/Invoice__c/fields/Centre_Phone__c.field-meta.xml
<CustomField>
    <fullName>Centre_Phone__c</fullName>
    <formula>Center__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Phone</label>
    <type>Text</type>
</CustomField>