force-app/main/default/objects/Invoice__c/fields/Chargeover_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Chargeover_Invoice__c</fullName>
    <label>Chargeover Invoice</label>
    <length>40</length>
    <type>Text</type>
</CustomField>