force-app/main/default/objects/Invoice__c/fields/Discount_LineItem_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_LineItem_Amount__c</fullName>
    <description>Discount calculated based on the new line items created!</description>
    <label>Discount LineItem Amount</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Is_Discount__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>