force-app/main/default/objects/Invoice__c/fields/Gross_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total__c</fullName>
    <description>Total Amount Excluding Deposits</description>
    <label>Gross Total</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Is_Deposit__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>