force-app/main/default/objects/Invoice__c/fields/GST_Tax__c.field-meta.xml
<CustomField>
    <fullName>GST_Tax__c</fullName>
    <formula>/* VALUE( $Label.GST_Tax_Rate )/100 */

 Center__r.Country__r.Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST/Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>