force-app/main/default/objects/Invoice__c/fields/GST_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Tax_Amount__c</fullName>
    <formula>GST_Tax__c  *  Sub_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GST/Tax Amount based on Sub Total</inlineHelpText>
    <label>GST/Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>