force-app/main/default/objects/Invoice__c/fields/Internal_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ref_No__c</fullName>
    <description>The purpose of this field is to store a running sequence of the invoices of each country which can be used by accounting and finance department for internal reference.</description>
    <label>Internal Ref No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>