force-app/main/default/objects/Invoice__c/fields/Inv_number_backend__c.field-meta.xml
<CustomField>
    <fullName>Inv_number_backend__c</fullName>
    <displayFormat>InvNo-{0000}</displayFormat>
    <label>Inv Number(Backend)</label>
    <type>AutoNumber</type>
</CustomField>