force-app/main/default/objects/Invoice__c/fields/Invoice_Void_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Void_Date__c</fullName>
    <label>Invoice Void Date</label>
    <type>Date</type>
</CustomField>