force-app/main/default/objects/Invoice__c/fields/IsSetScaleOnDiscount__c.field-meta.xml
<CustomField>
    <fullName>IsSetScaleOnDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Its temporary field created by tmc, after round amount on discount we will delete this field</description>
    <label>IsSetScaleOnDiscount</label>
    <type>Checkbox</type>
</CustomField>