force-app/main/default/objects/Invoice__c/fields/New_GST_Amount_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>New_GST_Amount_Admin_Fee__c</fullName>
    <formula>/*IF(Admin_Fees__c &gt; 0, (Admin_Fees__c  *  GST_Tax__c) +  New_GST_Amount__c , New_GST_Amount__c)*/

IF(Invoice_Date__c &lt; DATE(2019,07,01), GST_Tax_Amount__c, IF(Admin_Fees__c &gt; 0, (Admin_Fees__c  *  GST_Tax__c) +  New_GST_Amount__c , New_GST_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New GST Amount (Admin Fee GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>