force-app/main/default/objects/Invoice__c/fields/Only_Deposit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Only_Deposit_Invoice__c</fullName>
    <formula>AND(Deposit__c&gt;0,(Total_Invoice_Amount__c=Deposit__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Only Deposit Invoice</label>
    <type>Checkbox</type>
</CustomField>