force-app/main/default/objects/Invoice__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <description>This field is used to store amount received against the invoice</description>
    <inlineHelpText>Amount received</inlineHelpText>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>