force-app/main/default/objects/Invoice__c/fields/Sage_AR_Payment_Applied__c.field-meta.xml
<CustomField>
    <fullName>Sage_AR_Payment_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sage AR Payment Applied</label>
    <type>Checkbox</type>
</CustomField>