force-app/main/default/objects/Invoice__c/fields/SageCreditMemoOrderEntryKey__c.field-meta.xml
<CustomField>
    <fullName>SageCreditMemoOrderEntryKey__c</fullName>
    <label>SageCreditMemoOrderEntryKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>