force-app/main/default/objects/Invoice__c/fields/SageInvoiceKey__c.field-meta.xml
<CustomField>
    <fullName>SageInvoiceKey__c</fullName>
    <label>SageInvoiceKey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>