force-app/main/default/objects/Invoice__c/fields/SageOrderEntryKey__c.field-meta.xml
<CustomField>
    <fullName>SageOrderEntryKey__c</fullName>
    <label>SageOrderEntryKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>