force-app/main/default/objects/Invoice__c/fields/Stripe_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_Id__c</fullName>
    <label>Stripe Charge Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>