force-app/main/default/objects/Invoice__c/fields/Temp_Invoice_gst_check__c.field-meta.xml
<CustomField>
    <fullName>Temp_Invoice_gst_check__c</fullName>
    <description>Temporary field for check New or old gst amount diff</description>
    <formula>New_GST_Amount_Admin_Fee__c - GST_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Invoice gst diff check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>