force-app/main/default/objects/Invoice__c/fields/Voided_on_Sage__c.field-meta.xml
<CustomField>
    <fullName>Voided_on_Sage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voided on Sage</label>
    <type>Checkbox</type>
</CustomField>