force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>Deposit__c</columns>
    <columns>Gross_Total__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>