force-app/main/default/objects/Invoice__c/listViews/Paid_Invoices_June_2019.listView-meta.xml
<ListView>
    <fullName>Paid_Invoices_June_2019</fullName>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>Deposit__c</columns>
    <columns>Gross_Total__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Paid Invoices (June 2019)</label>
</ListView>